--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -143,7 +143,7 @@
                     <span id="progress" class="phase-path"></span>
 
                     <div class="disabled icon">{{{cloudinaryUrl 'v1492107684/at-stake/layout/meet-phase.svg' width=100 height=100}}}<span>meet</span></div>
-                    <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/think-phase.svg' width=100 height=100}}}<span>think</span></div>
+                    {{!-- <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/think-phase.svg' width=100 height=100}}}<span>think</span></div> --}}
                     <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/pitch-phase.svg' width=100 height=100}}}<span>pitch</span></div>
                     <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/delib-phase.svg' width=100 height=100}}}<span style="margin-left:-15px;">deliberate</span></div>
                     <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/dd-phase.svg' width=100 height=100}}}<span id="doubledown">double-down</span></div>
