--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -1,7 +1,7 @@
 // ** GAME LOBBY ** //
 #lobby {
-	
-	height:100%;
+
+	height: 100%;
 
 	// Waiting for players
 	&.wait {
@@ -26,12 +26,12 @@
 		width: 96px;
 		padding: 0px;
 		min-width: 0px;
-	  min-height: 0px;
-	  border-radius: 0px;
-	  background-color: transparent;
-	  border: 0px;
-	  font-weight: 800;
-	  font-size: 20px;
+		min-height: 0px;
+		border-radius: 0px;
+		background-color: transparent;
+		border: 0px;
+		font-weight: 800;
+		font-size: 20px;
 	}
 
 	// Lobby game screens
@@ -43,22 +43,24 @@
 		}
 
 		height: 100%;
+
 		&:not(#decider) {
 			width: 100%;
-		  height: 70%;
-		  bottom: 0px;
+			height: 70%;
+			bottom: 0px;
 
-		  &.player-grid {
-		  	width:100% !important;
-		  	left:0px !important;
-		  	animation-name: player-login;
-		  	animation-duration: 0.5s;
-		  	animation-fill-mode: forwards;
-		  }
+			&.player-grid {
+				width: 100% !important;
+				left: 0px !important;
+				animation-name: player-login;
+				animation-duration: 0.5s;
+				animation-fill-mode: forwards;
+			}
 		}
-		
+
 		&#decider {
-			padding-top:8px;
+			padding-top: 8px;
+
 			.waiting {
 				width: 100%;
 				margin: 0px auto;
@@ -68,13 +70,14 @@
 		#start {
 			width: 100%
 		}
-		#tutorial {
-	    padding-top: 65%;
 
-	    .btn_cap {
-	    	width: 200px;
-	    	margin: 0 auto;
-	    }
+		#tutorial {
+			padding-top: 65%;
+
+			.btn_cap {
+				width: 200px;
+				margin: 0 auto;
+			}
 		}
 
 		// Show back button on login screen
@@ -87,26 +90,26 @@
 			color: $turquoise-light;
 			width: 96px;
 			min-width: 0px;
-		  height: 24px;
-		  min-height: 0px;
-		  border-radius: 0px;
-		  background-color: transparent;
-		  border: 0px;
-		  font-size: 16px;
+			height: 24px;
+			min-height: 0px;
+			border-radius: 0px;
+			background-color: transparent;
+			border: 0px;
+			font-size: 16px;
 
-	    &:before {
-		    content: "";
+			&:before {
+				content: "";
 				position: absolute;
-		    z-index: 10;
-		    bottom: 5px;
-		    left: 18px;
-	      font-size: 16px;
-		    width: 0;
-		    height: 0;
-		    border-right: 10px solid $turquoise-light;
-		    border-top: 7px solid transparent;
-		    border-bottom: 7px solid transparent;
-	    }
+				z-index: 10;
+				bottom: 5px;
+				left: 18px;
+				font-size: 16px;
+				width: 0;
+				height: 0;
+				border-right: 10px solid $turquoise-light;
+				border-top: 7px solid transparent;
+				border-bottom: 7px solid transparent;
+			}
 		}
 
 		#btn-start-game {
@@ -114,15 +117,15 @@
 			white-space: normal;
 			color: white;
 			border: 0px;
-			border-radius:0px;
-			height:auto;
-			padding:0px;
+			border-radius: 0px;
+			height: auto;
+			padding: 0px;
 			margin: 0px;
 			margin-right: 20px;
-			margin-bottom: 10px;		
+			margin-bottom: 10px;
 			background-color: transparent;
 			font-weight: 800;
-			position:absolute;
+			position: absolute;
 			right: 0px;
 			bottom: 0px;
 			font-size: 24px;
@@ -132,49 +135,51 @@
 		.username {
 			margin-bottom: 20px;
 			font-family: AvenirNext;
-		  font-weight: bold;
-		  font-style: normal;
-		  font-stretch: normal;
-		  line-height: 1;
-		  letter-spacing: -1.9px;
-		  text-align: center;
-		  color: $color-white;
-		  
+			font-weight: bold;
+			font-style: normal;
+			font-stretch: normal;
+			line-height: 1;
+			letter-spacing: -1.9px;
+			text-align: center;
+			color: $color-white;
+
 			h2 {
 				font-size: 32px;
 				font-weight: 500;
 				text-shadow: 0 2px 2px rgba(0, 0, 0, 0.24);
 
-			  span {
-			  	font-family: AvenirNext-Medium;
-			  	font-weight: 700;
-			  }
+				span {
+					font-family: AvenirNext-Medium;
+					font-weight: 700;
+				}
 			}
+
 			p {
 				font-family: AvenirNext;
-			  font-size: 20px;
-			  font-weight: 500;
-			  font-style: normal;
-			  font-stretch: normal;
-			  line-height: 0.8;
-			  letter-spacing: 0px;
-			  text-align: center;
+				font-size: 20px;
+				font-weight: 500;
+				font-style: normal;
+				font-stretch: normal;
+				line-height: 0.8;
+				letter-spacing: 0px;
+				text-align: center;
 			}
 		}
 
 		&#choices {
 
-			margin-top:-16px;	
-			height: 80%;  
+			margin-top: -16px;
+			height: 80%;
+
 			#btn_new_game {
-				@include gradient-vertical($orange-light, $orange-dark, 90%, 10%);					
+				@include gradient-vertical($orange-light, $orange-dark, 90%, 10%);
 			}
 
 			#btn_join_game {
-				@include gradient-vertical($blue-light, $blue-dark, 90%, 10%);	
-				
+				@include gradient-vertical($blue-light, $blue-dark, 90%, 10%);
+
 			}
-		
+
 		}
 
 		.btn {
@@ -182,38 +187,41 @@
 			white-space: normal;
 			color: white;
 			border: 0px;
-			border-radius:0px;
-			height:48px;
-			padding:0px;
+			border-radius: 0px;
+			height: 48px;
+			padding: 0px;
 			margin: 0 auto;
 			margin-bottom: 60px;
 
 			h2 {
 				font-size: 20px;
 				line-height: 48px;
-				margin:0px;
+				margin: 0px;
 				margin-bottom: 10px;
 				font-family: AvenirNext-Bold;
-			  font-weight: bold;
-			  font-style: normal;
-			  font-stretch: normal;
-			  letter-spacing: 0px;
-			  text-align: center;
+				font-weight: bold;
+				font-style: normal;
+				font-stretch: normal;
+				letter-spacing: 0px;
+				text-align: center;
 			}
 		}
 
 		#btn-tutorial {
 			margin-bottom: 10px;
-			@include gradient-vertical($orange-light, $orange-dark, 90%, 10%);	
+			@include gradient-vertical($orange-light, $orange-dark, 90%, 10%);
 		}
+
 		#btn-tutorial-skip {
 			margin-bottom: 40px;
 			cursor: pointer;
 			background: none;
 			box-shadow: none;
+
 			h2 {
 				font-size: 16px;
 				font-family: $avenir-reg;
+
 				strong {
 					font-family: $avenir-heavy;
 				}
@@ -224,8 +232,8 @@
 	// Logo
 	#login-header {
 
-		padding-top:0px;
-		height:30%;
+		padding-top: 0px;
+		height: 30%;
 
 		img {
 			// height: 136px;
@@ -245,57 +253,62 @@
 
 	// Name entry
 	#name.lobby {
-		position:relative;
+		position: relative;
 
 		.form {
 			padding: 8px;
-	    // position: fixed;
-	    top: 10px;
-	    left: 0px;
-	    margin: 0 auto;
-	    z-index: 1000;
+			// position: fixed;
+			top: 10px;
+			left: 0px;
+			margin: 0 auto;
+			z-index: 1000;
 		}
+
 		p {
 			font-size: 12px;
 		}
+
 		#player-name {
 			height: 48px;
 			width: 100%;
 			margin: 0 auto;
 			font-size: 14px;
 			// line-height: 48px;
-		  border-radius: 0px;
-		  background-color: $color-white;
-		  // box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.2);
-		  border: 0px;
-		  border-top: 3px solid lighten($color-grey, 30%);
-		  margin: 0px;
-		  margin-bottom: 5px;
+			border-radius: 0px;
+			background-color: $color-white;
+			// box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.2);
+			border: 0px;
+			border-top: 3px solid lighten($color-grey, 30%);
+			margin: 0px;
+			margin-bottom: 5px;
 
-			&::-webkit-input-placeholder{ 
-			  font-size:12px;
-			  height: 48px;
-			  text-align: center;
+			&::-webkit-input-placeholder {
+				font-size: 12px;
+				height: 48px;
+				text-align: center;
 			}
-			&::-moz-placeholder{
-				font-size:12px;
-			  height: 48px;
-			  text-align: center;
+
+			&::-moz-placeholder {
+				font-size: 12px;
+				height: 48px;
+				text-align: center;
 
 			}
+
 			&:-ms-input-placeholder {
-				font-size:12px;
-			  height: 48px;
-			  text-align: center;
+				font-size: 12px;
+				height: 48px;
+				text-align: center;
 
 			}
+
 			&:-moz-placeholder {
-				font-size:12px;
-			  height: 48px;
-			  text-align: center;
+				font-size: 12px;
+				height: 48px;
+				text-align: center;
 
 			}
-			
+
 		}
 
 		.login-footer {
@@ -303,8 +316,8 @@
 			bottom: 0px;
 			// background-color: $turquoise-dark;
 			margin-left: -30px;
-			margin-right:-30px;
-			padding:40px;
+			margin-right: -30px;
+			padding: 40px;
 			height: 40%;
 		}
 
@@ -316,98 +329,47 @@
 			margin: 0px auto;
 			text-align: center;
 		}
+
 		#btn_submit_name {
 			@include gradient-vertical($pink-light, $pink-dark, 90%, 10%);
 			color: white;
 			border: 0px;
 			border-radius: 0px;
-			height:48px;
+			height: 48px;
 			width: 160px;
-			padding:0px;
+			padding: 0px;
 			font-size: 24px;
 			margin-bottom: 10%;
 			margin-top: 5%;
 			font-family: AvenirNext-Bold;
-		  font-size: 24px;
-		  font-weight: bold;
-		  font-style: normal;
-		  font-stretch: normal;
-		  line-height: 1;
-		  letter-spacing: 0px;
-		  text-align: center;
+			font-size: 24px;
+			font-weight: bold;
+			font-style: normal;
+			font-stretch: normal;
+			line-height: 1;
+			letter-spacing: 0px;
+			text-align: center;
 		}
 	}
 
 	.lobby {
-
-		p.instructions {
-			font-family: AvenirNext;
-		  font-size: 12px;
-		  font-weight: 200;
-		  font-style: normal;
-		  font-stretch: normal;
-		  line-height: 1.33;
-		  letter-spacing: 0px;
-		  text-align: center;
-		  padding: 5px;
-
-		  span {
-		  	font-weight: 700;
-		  	font-family: AvenirNext-Bold;
-		  	color: white;
-		  }
-		}
-
-		.login {
-			padding-top: 10%;
-		}
-
-		#access_code {
-			height: 48px;
-			width: 95%;
-			margin: 0 auto;
-			font-size: 12px;
-		  border-radius: 0px;
-		  background-color: $color-white;
-		  border: 0px;
-		  border-top: 3px solid lighten($color-grey, 30%);
-		  margin: 0px;
-
-		  &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-			  font-size:14px;
-			  height: 48px;
-			  text-align: center;
-			}
-			&::-moz-placeholder { /* Firefox 19+ */
-			  font-size:14px;
-			  height: 48px;
-			  text-align: center;
-			}
-			&:-ms-input-placeholder { /* IE 10+ */
-			  font-size:14px;
-			  height: 48px;
-			  text-align: center;
-			}
-			&:-moz-placeholder { /* Firefox 18- */
-			  font-size:14px;
-			  height: 48px;
-			  text-align: center;
-			}
-		}
 
 		.game_login {
 			width: 80%;
 			white-space: normal;
 			color: white;
 			border: 0px;
-			border-radius:0px;
-			height:48px;
-			padding:0px;
+			border-radius: 0px;
+			height: 48px;
+			padding: 0px;
 			margin: 0 auto;
 			margin-bottom: 10px;
-			background: -moz-linear-gradient(top, $orange-light 90%, $orange-dark 10%); /* FF3.6-15 */
-			background: -webkit-linear-gradient(top, $orange-light 90%, $orange-dark 10%); /* Chrome10-25,Safari5.1-6 */
-			background: linear-gradient(to bottom, $orange-light 90%, $orange-dark 10%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+			background: -moz-linear-gradient(top, $orange-light 90%, $orange-dark 10%);
+			/* FF3.6-15 */
+			background: -webkit-linear-gradient(top, $orange-light 90%, $orange-dark 10%);
+			/* Chrome10-25,Safari5.1-6 */
+			background: linear-gradient(to bottom, $orange-light 90%, $orange-dark 10%);
+			/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 			position: relative;
 			font-family: AvenirNext-Bold;
 			font-size: 20px;
@@ -419,17 +381,78 @@
 			text-align: center;
 		}
 
+		p.instructions {
+			font-family: AvenirNext;
+			font-size: 12px;
+			font-weight: 200;
+			font-style: normal;
+			font-stretch: normal;
+			line-height: 1.33;
+			letter-spacing: 0px;
+			text-align: center;
+			padding: 5px;
 
+			span {
+				font-weight: 700;
+				font-family: AvenirNext-Bold;
+				color: white;
+			}
+		}
+
+		.login {
+			padding-top: 10%;
+		}
+
+		#access_code {
+			height: 48px;
+			width: 95%;
+			margin: 0 auto;
+			font-size: 12px;
+			border-radius: 0px;
+			background-color: $color-white;
+			border: 0px;
+			border-top: 3px solid lighten($color-grey, 30%);
+			margin: 0px;
+
+			&::-webkit-input-placeholder {
+				/* Chrome/Opera/Safari */
+				font-size: 14px;
+				height: 48px;
+				text-align: center;
+			}
+
+			&::-moz-placeholder {
+				/* Firefox 19+ */
+				font-size: 14px;
+				height: 48px;
+				text-align: center;
+			}
+
+			&:-ms-input-placeholder {
+				/* IE 10+ */
+				font-size: 14px;
+				height: 48px;
+				text-align: center;
+			}
+
+			&:-moz-placeholder {
+				/* Firefox 18- */
+				font-size: 14px;
+				height: 48px;
+				text-align: center;
+			}
+		}
 	}
 
 	// Deck selection
 	.create {
 		height: 100%;
 
-		.back-button{
+		.back-button {
 			bottom: 0px;
 		}
-		.game_login{
+
+		.game_login {
 			bottom: 0px;
 		}
 
@@ -442,6 +465,7 @@
 			color: #fafafa;
 			margin-bottom: 8px;
 		}
+
 		.decks-prompt {
 			font-size: 12px;
 			color: lighten($background-color, 15%)
@@ -450,12 +474,13 @@
 		h3 {
 			font-weight: 700;
 			color: white;
-			margin:0px;
-		  font-family: AvenirNext-Bold;
+			margin: 0px;
+			font-family: AvenirNext-Bold;
 		}
 
 		#decks {
 			width: 100%;
+			height: 270px;
 			visibility: hidden;
 
 			button {
@@ -464,59 +489,21 @@
 				padding: 2px;
 				height: 8px;
 				width: 8px;
-				border-radius:4px;
-				border:none;
+				border-radius: 4px;
+				border: none;
 			}
 
-		  .dot {
-		  	height: 8px;
-		  	width: 8px;
-		  	border-radius: 4px;
-		  	background-color: $color-orange;
-		  }
-
-		  	&.glide, .glide__track {
-				height: auto!important;
-			}
-			.glide__bullets {
-				bottom: auto;
-				height: auto;
-				position: relative;
-			}
-			.glide__bullets > * {
-				background-color: #d8d8d8;
-			}
-			.glide__bullets > *.active {
-				background-color: white;
-			}
-			.glide__bullets > *:focus {
-				border: 0px;
-			}
-			.glide__slide {
-
-				min-width: 320px;
-
-				@media(max-width:320px){
-					min-width: 270px;
-				}
-
-				&.active {
-					.deck {
-						box-shadow: 0 8px 0 0 rgba(85, 85, 85, 0.2);
-					}
-				}
-
-		  	.deck {
-			    font-size: small;
-			    color: black;
-			    margin: 1%;
-			    display: inline-block;
-			    background-color: white;
-			    // box-shadow: 0 2px 4px 0 rgba(85, 85, 85, 0.25);
-			    border-radius: 0px;
-			    height:100%;
-			    width: 98%;
-
+			#scroll {
+				overflow-y: scroll;
+			
+				.deck {
+					font-size: small;
+					color: black;
+					margin: 1%;
+					display: inline-block;
+					width: 98%;
+					cursor: pointer;
+	
 					.deck-header {
 						background-color: $color-orange;
 						padding: 8px;
@@ -524,105 +511,48 @@
 						box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
 						font-weight: 700;
 						font-size: 16px;
-				  	font-family: AvenirNext-Bold;
-				  	h2 {
-				  		margin:0px;
-				  	}
-
-				  	.description {
-				  		font-size: 12px;
-				  	}
+						font-family: AvenirNext-Bold;
+	
+						h2 {
+							margin: 0px;
+						}
+	
+						.description {
+							font-size: 12px;
+						}
 					}
-
-					.flag {
-						color:$color-orange;
-					  margin: 8px;
-					}
-
-					.question {
-						height: auto;
-						margin: 8px 16px;
-						color: #949494;
-					  text-align: center;
-				  	line-height: 12px;
-				  	font-size: 12px;
-				  	width:90%;
-
-					}
-
-					.stakeholders {
-						width: 100%;
-						padding:0px;
-						display: inline-block;
-					}
-
-					.deck-role {
-					  display: block;
-					  font-size: 12px;
-				    color: white;
-				    background-color: $color-orange;
-				    width: 40%;
-					  min-height: 34px;
-					  max-height: 34px;
-				    margin-bottom: 8px;
-				    display: table;
-
-				    p {
-				    	display:table-cell;
-				    	padding:0px;
-				    	line-height: 1.33;
-				    	vertical-align: middle;
-				    	text-align: center;
-				    }
-
-				    &:nth-child(1) {
-				    	margin-left:8%;
-				    	margin-right:2%;
-				    }
-				    &:nth-child(2) {
-				    	margin-right:8%;
-				    	margin-left:2%;
-				    }
-				    &:nth-child(3) {
-				    	margin-left:8%;
-				    	margin-right:2%;
-				    }
-				    &:nth-child(4) {
-				    	margin-right:8%;
-				    	margin-left:2%;
-				    }
-
-					}
-
 				}
 			}
-			.glide--horizontal {
-				.glide__arrows {
-			    top: 22%;
-			  }
+
+			.deck-modal {
+				background-color: white;
+				color: black;
 			}
+
 		}
 	}
 
 	// Share code screen
-	#share_code, #game_code {
+	#share_code,
+	#game_code {
 		text-align: center;
-	  color: #fafafa;
-	  width:100%;
-	  margin-top: -30px;
+		color: #fafafa;
+		width: 100%;
+		margin-top: -30px;
 
 		h1:not(.access-code) {
-	    font-size: 24px;
-	    margin: 0px;
-	    margin-bottom: 20px;
-		  width: 100%;
-		  font-family: AvenirNext-Bold;
-		  font-weight: bold;
+			font-size: 24px;
+			margin: 0px;
+			margin-bottom: 20px;
+			width: 100%;
+			font-family: AvenirNext-Bold;
+			font-weight: bold;
 		}
+
 		p {
 			font-size: 12px;
-		  color: #ebebeb;
-		  font-family: $avenir-reg;
+			color: #ebebeb;
+			font-family: $avenir-reg;
 		}
 	}
 
@@ -632,46 +562,51 @@
 
 		.access-code {
 			max-width: 200px;
-		  height: auto;
-		  font-size: 56px !important;
-		  padding: 5px;
-		  // color: #0098d0;
-		  border: 3px solid #61f5de;
-		  background-color: #00c2a9;
-		  margin: 10px auto;
-		  font-family: $aileron;
+			height: auto;
+			font-size: 56px !important;
+			padding: 5px;
+			// color: #0098d0;
+			border: 3px solid #61f5de;
+			background-color: #00c2a9;
+			margin: 10px auto;
+			font-family: $aileron;
 
-		  span:nth-child(1) {
-		  	color: #56f6d6;
-		  }
-		  // TODO: color var
-		  span:nth-child(2) {
-		  	color: #fc2058;
-		  }
-		  span:nth-child(3) {
-			  color: #fdb211;
-		  }
-		  span:nth-child(4) {
-		  	color: #6b00fb;
-		  }
+			span:nth-child(1) {
+				color: #56f6d6;
+			}
+
+			// TODO: color var
+			span:nth-child(2) {
+				color: #fc2058;
+			}
+
+			span:nth-child(3) {
+				color: #fdb211;
+			}
+
+			span:nth-child(4) {
+				color: #6b00fb;
+			}
 		}
+
 		p {
 			font-size: 16px;
 		}
 	}
-		
+
 	.player-logo {
 		height: 40px;
 		width: 200px;
-		margin:8px;
+		margin: 8px;
+
 		p {
 			text-align: left;
 			color: #949494;
 			font-family: AvenirNext-Bold;
 			font-size: 20px;
-			height:20px;
+			height: 20px;
 			line-height: 40px;
-			float:left;
+			float: left;
 			margin: 0px;
 
 		}
@@ -680,22 +615,23 @@
 	#players {
 		height: auto;
 	}
+
 	.player-grid {
 		background-color: white;
 		max-height: 60%;
-    min-height: 50%;
-    width: 100%;
-    left: 0px;
+		min-height: 50%;
+		width: 100%;
+		left: 0px;
 		position: absolute;
 		bottom: 10%;
-	  border-top: solid 4px $turquoise-dark;
+		border-top: solid 4px $turquoise-dark;
 	}
 
 
 	// If not on login screen, hide the back button
 	&:not(.lobby) {
 		button#lobby-back {
-			display: none;	
+			display: none;
 		}
 	}
 
@@ -718,7 +654,7 @@
 			}
 
 		}
-		
+
 	}
 
 }
