--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -186,6 +186,73 @@ newGameHandler = function() {
             return;
         }
 
+        function selectBtnListener() {
+
+            $('#decider #decks .btn_submit').click(function(evt) {
+                var data = {};
+                var deckName = $(".deck-modal:visible h2").text();
+
+                data.deciderName = $('#player-name').val();
+
+                if(!data.deciderName) {
+                    $('.submission .error').text('Please enter your name!').fadeIn();
+                    return;
+                }
+
+                data.deckId = $(".deck-modal:visible").data('id');
+                data.accessCode = $('#share_code .access-code span').text();
+
+              $.post(
+                  "/api/create/",
+                    data)
+                    .done(function(data) {
+
+                        if(data.sessionCreated) {
+
+                            setupDecider();
+                            var gameCodeHtml = '';
+                            
+                            $('#login').remove();
+
+                        loginFromTo('new', 'lobby', .09);
+
+                        _.each(data.accessCode.split(''), function(char, i) {
+                          gameCodeHtml += '<span>' + char + '</span>';
+                      });
+
+                        // Ensure login is gone and all decide UI shows
+                        $('#name,#join').remove();
+
+                        $('#decider .create').hide();
+                        $('#decider').show();
+                        $('#lobby').addClass('wait');
+
+                        $('#player-name').val(data.decider);
+
+                        // Analytics
+                        {{#ifeq environment "production"}}
+                        ga('send', 'event', 'Login', 'Username', data.decider);
+                        ga('send', 'event', 'Login', 'New Game', data.accessCode);
+                        ga('send', 'event', 'Game', 'Deck Name', deckName);
+                   
+                        smartlook('tag', 'created_game', 'yes');
+                        smartlook('tag', 'username', username);
+                        smartlook('tag', 'code', data.accessCode);
+                        {{/ifeq}}
+                
+                        }
+                    })
+                    .fail(function(xhr, status, error) {
+
+                        if(xhr.responseJSON.error)							
+                            $('#decider .error').text(xhr.responseJSON.error).fadeIn();
+
+                    });
+
+            });
+
+        }
+
         $.get(
             "/api/generate",
             function( data ) {
@@ -202,16 +269,11 @@ newGameHandler = function() {
                         // Tell mobile action has completed
                         $('body').trigger('mobileCallback');
 
-                        if(!$('#decks').hasClass('glide--carousel')) {
-                        
-                            $('#decks').glide({
-                                type: 'carousel',
-                                autoplay: false,
-                                autoheight: true, 
-                                paddings: 0
-                            });
-                        
-                        }
+                        $('.deck').click(function(evt) {
+                            modalOpenClose($('.deck-modal.' + $(evt.currentTarget).data('id')), true);
+                        });
+
+                        selectBtnListener();
 
                     });
 
